crawl-cluster/config/jobserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-server
  labels:
    app: job-server
spec:
  selector:
    matchLabels:
      app: job-server
  replicas: 1
  template:
    metadata:
      labels:
        app: job-server
    spec:
      containers:
        - name: job-server
          image: job-server
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: job-server
spec:
  selector:
    app: job-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
