crawl-cluster/config/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: rabbitmq
  name: rabbitmq-service
spec:
  type: NodePort
  ports:
  - port: 5672
    name: main
  - port: 15672
    name: management
  selector:
    app: taskQueue
    component: rabbitmq
