crawl-cluster/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: job-server
                port:
                  number: 80
